[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "vcs"

[project]
name = "carina"
dynamic = ["version"]
description = "Stylesheet free theming for Qt applications"
readme = "README.md"
requires-python = ">=3.10"
license = "BSD-3-Clause"
authors = [{ name = "Talley Lambert", email = "talley.lambert@gmail.com" }]
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Typing :: Typed",
]
dependencies = []

[project.optional-dependencies]
pyqt6 = ["PyQt6-Qlementine"]
pyside6 = ["PySide6-Qlementine"]

[project.urls]
homepage = "https://github.com/tlambert03/carina"
repository = "https://github.com/tlambert03/carina"

[dependency-groups]
test = ["pytest", "pytest-cov"]
docs = [
    "griffe-fieldz>=0.5.0",
    "mkdocstrings-python>=2.0.3",
    "zensical>=0.0.28",
]
dev = [
    { include-group = "test" },
    "ipython>=8.18.1",
    "pdbpp>=0.12.1 ; sys_platform != 'win32'",
    "prek>=0.3.6",
    "pyright>=1.1.408",
    "pyside6-stubs",
    "rich>=14.3.3",
    "ruff>=0.15.6",
    "ty>=0.0.23",
]


[tool.uv.sources]
carina = { workspace = true }
pyside6-stubs = { git = "https://github.com/tlambert03/PySide6-stubs", rev = "v6.8.1" }
pyqt6-qlementine = { path = "../PyQlementine/packages/PyQt6-Qlementine" }

[tool.uv]
environments = [
    "sys_platform == 'linux' and platform_machine == 'x86_64'",
    "sys_platform == 'darwin' and platform_machine == 'arm64'",
    "sys_platform == 'win32'",
]

[tool.ruff]
line-length = 88
target-version = "py310"
src = ["src"]
fix = true
unsafe-fixes = true

[tool.ruff.lint]
pydocstyle = { convention = "numpy" }
select = [
    "E",    # style errors
    "W",    # style warnings
    "F",    # flakes
    "D",    # pydocstyle
    "D417", # Missing argument descriptions in Docstrings
    "I",    # isort
    "UP",   # pyupgrade
    "C4",   # flake8-comprehensions
    "B",    # flake8-bugbear
    "A001", # flake8-builtins
    "ANN",  # flake8-annotations
    "RUF",  # ruff-specific rules
    "TC",   # flake8-type-checking
    "TID",  # flake8-tidy-imports
]
ignore = [
    "ANN401", # allow the use of Any type
    "D401",   # First line should be in imperative mood (remove to opt in)
]

[tool.ruff.lint.per-file-ignores]
"tests/*.py" = ["D", "S"]
"docs/*.py" = ["D", "A"]
"src/carina/_qt/**/*.py" = ["F401", "F403", "F405"]
"src/carina/Qlementine.py" = ["F403"]

[tool.ruff.lint.flake8-tidy-imports]
ban-relative-imports = "all"

[tool.ruff.format]
docstring-code-format = true
skip-magic-trailing-comma = false # default is false

[tool.pytest.ini_options]
minversion = "7.0"
addopts = ["--color=yes"]
testpaths = ["tests"]
filterwarnings = ["error"]

# https://coverage.readthedocs.io/
[tool.coverage.report]
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "@overload",
    "except ImportError",
    "raise AssertionError",
    "\\.\\.\\.",
    "raise NotImplementedError()",
    "pass",
]

[tool.coverage.run]
source = ["carina"]

[tool.check-manifest]
ignore = [
    ".pre-commit-config.yaml",
    ".ruff_cache/**/*",
    "tests/**/*",
    "uv.lock",
]

# https://github.com/crate-ci/typos/blob/master/docs/reference.md
[tool.typos.default]
extend-ignore-identifiers-re = []

[tool.ty.environment]
python = "./.venv"

[tool.ty.rules]
unresolved-attribute = "ignore"

[tool.ty.src]
exclude = ["src/carina/_qt/Qlementine.pyi"]

[tool.pyright]
exclude = ["src/carina/_qt/Qlementine.pyi"]
